welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:2: error: not found: value a
  if ((a<0 && b>100)||(a>100 && b<0)){
       ^icyHot:2: error: not found: value b
  if ((a<0 && b>100)||(a>100 && b<0)){
              ^icyHot:2: error: not found: value a
  if ((a<0 && b>100)||(a>100 && b<0)){
                       ^icyHot:2: error: not found: value b
  if ((a<0 && b>100)||(a>100 && b<0)){
                                ^